--- a/complete-javascript-course-master/01-Fundamentals-Part-1/starter/index.html
+++ b/complete-javascript-course-master/01-Fundamentals-Part-1/starter/index.html
@@ -29,9 +29,9 @@
 
   </script>
 
-  <!-- <script src="main.js" defer></script> -->
+  <script src="main.js" defer></script>
 
-  <script src="assignments.js"></script>
+  <!-- <script src="assignments.js"></script> -->
 </head>
 
 <body>
